--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "author": "Spotify",
   "name": "web-api-auth-examples",
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
+  "start": "node app.js",
   "version": "0.0.2",
   "dependencies": {
     "cookie-parser": "1.3.2",
