--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "web-api-auth-examples",
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "start": "node app.js",
+  "scripts": {
+      "start": "node app.js"
+  },
   "version": "0.0.2",
   "dependencies": {
     "cookie-parser": "1.3.2",
